--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,21 @@
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
 *::before,
 *::after {
   box-sizing: inherit;
+}
+:root {
+  --font-lato: 'Lato', sans-serif;
+  --btn-bg: #16d5ff;
+  --white-color: #fff;
+  --text--color: #111;
+  --link-color: #888;
+  --font-poppins: 'Poppins', sans-serif;
+    
 }
 
 body {
@@ -16,19 +26,464 @@ body {
   min-height: 100vh;
   background-color: #fff;
   font-family: sans-serif;
+  
 }
 
 img {
   max-width: 100%;
   height: auto;
 }
-
+ul {
+  list-style: none;
+  padding: 0;
+}
 .container {
   padding-left: 20px;
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
+
+.hero__logo a {
+  transition: opacity 0.4s ease;
+}
+.hero__logo a:hover {
+  opacity: 0.7;
+}
+.hero {
+  margin-top: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.hero-nav__list {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  list-style: none;
+}
+.hero-nav__item {
+  margin-left: 35px;
+  position: relative;
+}
+.hero-nav__link {
+  text-decoration: none;
+  color: var(--link-color);
+  font-weight: 700;
+  font-size: 16px;
+  text-transform: uppercase;
+  transition: all 0.4s ease;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.hero-nav__item:hover .hero-nav__link {
+  color: var(--btn-bg);
+}
+.hero-nav__item:hover .hero-nav__link::before {
+  width: 100%;
+}
+.bx-chevron-down {
+  transition: all 0.4s ease;
+}
+.hero-nav__item:hover .hero-nav__link .bx {
+  transform: rotate(180deg);
+}
+.hero-nav__link .bx {
+  font-size: 25px;
+  margin: 0;
+  padding: 0;
+}
+.hero-nav__link {
+  width: 100%;
+  height: 28px;
+}
+.hero-nav__link::before {
+  content: "";
+  width: 0%;
+  height: 2px;
+  background-color: var(--btn-bg);
+  display: block;
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  transition: width 0.4s ease;
+}
+.hero__more:hover .more {
+  visibility: visible;
+}
+.more {
+  width: 250px;
+  padding: 5px 5px 0 5px;
+  box-shadow: 0px 0px 10px 1px rgb(0 0 0 / 10%);
+  position: absolute;
+  top: 33px;
+  left: -20px;
+  visibility: hidden;
+  z-index: 1000000;
+  background-color: #fff;
+}
+.more__item {
+  width: 245px;
+  height: 30px;
+  border-bottom: 1px solid rgb(136 136 136 / .3); 
+  padding-top: 5px;
+  padding-left: 15px;
+  position: relative;
+}
+.more__item::before {
+  content: "";
+  width: 0px;
+  height: 30px;
+  display: block;
+  background-color: var(--btn-bg);
+  position: absolute;
+  top: -1px;
+  left: -5px;
+  transition: width 0.4s ease;
+}
+.more__item:hover::before {
+  width: 6px;
+  top: -1px;
+  height: 30px;
+}
+.more__item:hover .more__link {
+  padding-left: 6px;
+}
+.more__link {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--link-color);
+  transition: padding 0.4s ease;
+}
+.btn {
+  color: var(--white-color);
+  background: var(--btn-bg);
+  border: 1px solid #16d5ff;
+  border-color: var(--btn-bg);
+  border-radius: 5px;
+  padding: 12px 30px;
+  display: inline-block;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  position: relative;
+}
+.hero-nav__sign {
+  color: var(--white-color);
+  margin-left: 20px;
+}
+.btn:hover{
+  transform: translate(0,-5px);
+}
+.btn:hover::before{
+  opacity: 1;
+  transform: translate(0,5px);
+}
+.btn::before{
+  content: "";
+  opacity: 0;
+  position:absolute;
+  display: block;
+  width: 90%;
+  height: 10px;
+  top: 100%;
+  left: 5%;
+  background: -webkit-radial-gradient(center, ellipse, rgb(22, 213, 255, .5) 0%, rgba(0, 0, 0, 0) 80%);
+  background: radial-gradient(ellipse at center, rgb(22, 213, 255, .5) 0%, rgba(0, 0, 0, 0) 80%);
+  transition: opacity 0.4s ease, transform 0.4s ease;
+}
+
+.up-btn {
+  width: 40px;
+  height: 40px;
+  background-color: var(--btn-bg);
+  display: inline-block;
+  border-radius: 5px;
+  position: fixed;
+  right: 20px;
+  bottom: 30px;
+  text-decoration: none;
+}
+.up-btn .bx-chevron-up {
+  font-size: 35px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 4px;
+}
+/* ---------CONTENT--------- */
+.content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 80px;
+}
+.content__title {
+  font-size: 50px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  color: var(--text--color);
+  font-family: 'Poppins', sans-serif;
+}
+.content__title span {
+  color: var(--btn-bg);
+}
+.content__text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--link-color);
+  margin-bottom: 25px;
+}
+
+.content__wrapper {
+  transform: translate(-40%,0);
+  animation-name: wrapper-anim;
+  animation-duration: 1.3s;
+  animation-fill-mode: both;
+  opacity: 0;
+}
+.content__img{
+  transform: translate(40%,0);
+  animation-name: img-animation;
+  animation-duration: 1.3s;
+  animation-fill-mode: both;
+  opacity: 0;
+}
+.content__image {
+  animation-name: image-anim;
+  animation-iteration-count: infinite;
+  animation-delay: 1.5s;
+  animation-duration: 2s;
+}
+@keyframes  image-anim{
+  50%{
+    transform: translate(0,-7px);
+  }
+  100%{
+    transform: translate(0,0);
+  }
+}
+@keyframes  wrapper-anim{
+  100%{
+    transform: translate(0,0);
+    opacity: 1;
+  }
+}
+@keyframes  img-animation{
+  100%{
+    opacity: 1;
+    transform: translate(0,0); 
+  }
+}
+/* ---------WORKS--------- */
+.it-works {
+  width: 100%;
+  background-color: #F2F8FE;
+  padding-bottom: 150px;
+}
+.works {
+  padding-top: 70px;
+  text-align: center;
+  
+}
+.works__title {
+  text-transform: uppercase;
+  font-size: 16px;
+  color: var(--btn-bg);
+  margin-bottom: 0px;
+}
+.works__subtitle {
+  font-size: 40px;
+  font-weight: 600;
+  margin-top: 10px;
+
+  font-family: var(--font-poppins);
+}
+.works__text {
+  max-width: 650px;
+  margin: 0 auto;
+  color: var(--link-color);
+  line-height: 28px;
+}
+.works-sell {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 100px;
+  
+}
+.works-sell__animation{
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+.works-sell__bg {
+  position:absolute;
+  width: 100%;
+  height: 100%;
+  background: url("https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/work-petern.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  animation: animation-bg;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  left: 0;
+  top: 0;
+}
+
+.works-sell__img {
+  animation: animation-img;
+  animation-duration: 9s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+@keyframes animation-img {
+  100%{
+    transform: rotate(180deg);
+  }
+}
+@keyframes animation-bg {
+  50%{
+    transform: scale(1.2);
+  }
+  100%{
+    transform: scale(0.8);
+  }
+}
+.works-sell-text__tite {
+  font-family: var(--font-poppins);
+  font-size: 30px;
+  font-weight: 600;
+  max-width: 500px;
+  color: var(--text--color);
+}
+.works-sell-text__text {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
+  color: var(--text--color);
+  max-width: 480px;
+}
+.works-sell-text__list {
+  margin-top: 25px;
+}
+.works-sell-text__item {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
+  color: var(--text--color);
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+.bxs-check-circle {
+  font-size: 22px;
+  color: #16d5ff;
+  margin-right: 7px;
+}
+/* ------FEATURES------- */
+.features {
+  margin-top: 70px;
+}
+.features__title {
+  font-family: var(--font-poppins);
+  font-weight: 400;
+  font-size: 14px;
+  color: var(--btn-bg);
+  text-align: center;
+}
+.features__subtitle {
+  font-family: var(--font-poppins);
+  font-size: 40px;
+  font-weight: 600;
+  color: var(--text--color);
+  text-align: center;
+  margin-top: 15px;
+}
+.features__text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--link-color);
+  max-width: 580px;
+  margin: 0 auto;
+  text-align: center;
+}
+.features-list {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  margin-top: 80px;
+}
+.features-list__item {
+  margin-bottom: 50px;
+}
+.features-list__item::before {
+  content: "";
+  display: block;
+  background-repeat: no-repeat;
+  transition: all 0.2s ease;
+}
+.features-list__item:nth-child(1)::before {
+  background-image: url("https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/feature-1.png");
+  width: 43px;
+  height: 53px;
+}
+.features-list__item:nth-child(2)::before {
+  background-image: url("https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/feature-2.png");
+  width: 46px;
+  height: 52px;
+}
+.features-list__item:nth-child(3)::before {
+  background-image: url("https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/feature-3.png");
+  width: 45px;
+  height: 45px;
+}
+.features-list__item:nth-child(4)::before {
+  background-image: url("https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/feature-4.png");
+  width: 46px;
+  height: 51px;
+}
+.features-list__item:nth-child(5)::before {
+  background-image: url("https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/feature-5.png");
+  width: 50px;
+  height: 50px;
+}
+.features-list__item:nth-child(6)::before {
+  background-image: url("https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/feature-6.png");
+  width: 47px;
+  height: 47px;
+}
+.features-list__item:hover::before {
+  filter: grayscale(1);
+}
+.features-list__title {
+  font-size: 24px;
+  font-weight: 600px;
+  color: var(--text--color);
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
+.features-list__title:hover {
+  color: var(--btn-bg);
+}
+.features-list__text {
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--link-color);
+  width: 310px;
+}
+
+
+
+
+
+
+
 
 
 @media only screen and (min-width: 1200px) {
